fix links on head spacing

--- a/src/app/components/head/head.component.css
+++ b/src/app/components/head/head.component.css
@@ -13,7 +13,10 @@
 .container-fluid a {
   text-decoration: none;
   color: #000;
-  letter-spacing: 2;
+  letter-spacing: 0.1rem;
+  padding-right: 0.5vw;
+  padding-left: 0.5vw;
+  margin-right: 1vh;
 }
 
 
